@@ -1,0 +1,30 @@
+// ============================================================================
+//   Copyright 2006-2009 Daniel W. Dyer
+//
+//   Licensed under the Apache License, Version 2.0 (the "License");
+//   you may not use this file except in compliance with the License.
+//   You may obtain a copy of the License at
+//
+//       http://www.apache.org/licenses/LICENSE-2.0
+//
+//   Unless required by applicable law or agreed to in writing, software
+//   distributed under the License is distributed on an "AS IS" BASIS,
+//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+//   See the License for the specific language governing permissions and
+//   limitations under the License.
+// ============================================================================
+package org.uncommons.watchmaker.framework.factories;
+
+import java.util.Random;
+
+/**
+ * Stub candidate factory for tests.  Always returns zero-valued integers.
+ * @author Daniel Dyer
+ */
+public final class StubIntegerFactory extends AbstractCandidateFactory<Integer>
+{
+    public Integer generateRandomCandidate(Random rng)
+    {
+        return 0;
+    }
+}
